most-of-the-labs/finished/DevOps-Materials/K8s/mern-eks-infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orders-app-ingress
  namespace: orders-app
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:050752632489:certificate/b0d136a4-cd75-40a7-901a-15277dac4ab5
    external-dns.alpha.kubernetes.io/hostname: orders.iitc-course.com
spec:
  ingressClassName: alb
  rules:
    - host: orders.iitc-course.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
